# webcanon

./: .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
docs/: 00_memo.md  README.md  _config.yml  ai-framework-affinity.md  ai-models.md  architecture.md  branching.md  customization.md  extraction-quality.md  index.md  llms-resolution.md  policy-model.md  publishing.md  robots-compliance.md  security.md
src/webcanon/: __init__.py  ai.py  cli.py  client.py  config.py  errors.py  extract.py  fetch.py  headless.py  hooks.py  llms.py  provenance.py  robots.py  schema.py  sitemap.py  ssrf.py  types.py  urls.py
tests/: test_ai.py  test_cli.py  test_client.py  test_hooks.py  test_html_and_headless.py  test_interop.py  test_misc.py  test_robots.py
