[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "webcanon"
version = "0.4.0"
description = "Policy-aware web retrieval for AI: robots.txt, llms.txt, sitemap.xml, fetching, extraction, and provenance in one layer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "WebCanon contributors" }]
keywords = [
    "robots.txt",
    "llms.txt",
    "sitemap",
    "web-retrieval",
    "rag",
    "llm",
    "markdown",
    "provenance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
headless = [
    "playwright>=1.40",
]
ai = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.40",
]
gemini = [
    "google-genai>=0.3",
]
dev = [
    "pytest>=7",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/webcanon/webcanon"
Documentation = "https://github.com/webcanon/webcanon/tree/main/docs"
Repository = "https://github.com/webcanon/webcanon"
Issues = "https://github.com/webcanon/webcanon/issues"

[project.scripts]
webcanon = "webcanon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/webcanon"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
